syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "com.iplease.lib.ip.manage";
option java_outer_classname = "ApiProto";


service IpManageQueryService {
  rpc existsAssignedIpByUuid(google.protobuf.Int64Value) returns (google.protobuf.BoolValue);
  rpc getAssignedIpByUuid(google.protobuf.Int64Value) returns (AssignedIp);
}

message AssignedIp {
  int64 uuid = 1;
  int64 issuerUuid = 2;
  int64 assignerUuid = 3;
  Date assignedAt = 4;
  Date expireAt = 5;
  Ip ip  = 6;
}

message Ip {
  int32 first = 1;
  int32 second = 2;
  int32 third = 3;
  int32 fourth = 4;
}

message Date {
  int32 year = 1;
  int32 month = 2;
  int32 day = 3;
}